--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
- "name": "assessmentprojectsoftedge",
- "version": "1.0.0",
- "main": "index.js",
- "scripts": {
-   "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "node ."
- },
- "author": "",
- "license": "ISC",
- "description": "",
- "dependencies": {
-   "civic-info": "0.0.5",
-   "script": "^0.1.4",
-   "start": "^5.1.0"
- }
+  "name": "assessmentprojectsoftedge",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "civic-info": "0.0.5",
+    "http-server": "^0.10.0",
+    "script": "^0.1.4",
+    "start": "^5.1.0"
+  }
 }
